fix responsive layout issues & make footer responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@0;1&display=swap');
 
 /* // Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) { ... }
+@media (min-width: 576px) {
+  /*CSS styles here*/
+}
 
 /* // Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) { ... }
+@media (min-width: 768px) {
+  /*CSS styles here*/
+}
 
 /* // Large devices (desktops, 992px and up) */
-@media (min-width: 992px) { ... }
+@media (min-width: 992px) {
+  /*CSS styles here*/
+}
 
 /* // Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { ... }
+@media (min-width: 1200px) {
+  /*CSS styles here*/
+}
 
 * {
   margin: 0;
@@ -19,9 +27,9 @@
 
 body,
 html {
-  height: 100%;
+  /* height: 100%; */
   background-color: black;
-  color: #FFFEF2;
+  color: #fffef2;
 }
 
 .h2-custom {
